--- a/src/common/less/index.less
+++ b/src/common/less/index.less
@@ -1,2 +1,16 @@
 @import "./resect.less";
 @import "./iconfont.less";
+
+// 重置placeholder-color
+::-webkit-input-placeholder {
+	color: #999;
+}
+:-moz-placeholder {
+	color: #999;
+}
+::-moz-placeholder {
+	color: #999;
+}
+:-ms-input-placeholder {
+	color: #999;
+}
