--- a/src/common/less/resect.less
+++ b/src/common/less/resect.less
@@ -5,9 +5,10 @@
 }
 
 .yd-slider-pagination-item {
-  margin: .1rem;
-  width: .1rem;
-  height: .1rem;
+  display: block;
+  margin: 5px;
+  width: 5px;
+  height: 5px;
   border-radius: 0;
   background-color: #fff;
 }
@@ -39,9 +40,10 @@
 }
 
 .yd-tab-nav .yd-tab-active:before {
-  width: .7rem;
-  margin-left: -.35rem;
+  width: .5rem;
+  margin-left: -.25rem;
   bottom: 1px;
+  border-radius: 5px;
 }
 
 .yd-tab-nav:after {
